fix de text align

--- a/styles/scss/_discussoes.scss
+++ b/styles/scss/_discussoes.scss
@@ -293,6 +293,7 @@
 					font-weight: 700;
 					font-size: rem(16);
 					line-height: math.div(20, 16);
+					text-align: center;
 					color: #707070;
 				}
 				a {
